--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
+node_modules
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Runtime data
 pids
@@ -22,16 +15,21 @@ pids
 *.pid.lock
 
 # Coverage directory used by tools like istanbul
-coverage/
-
-# nyc test coverage
+coverage
+*.lcov
 .nyc_output
 
 # Dependency directories
 jspm_packages/
 
+# TypeScript cache
+*.tsbuildinfo
+
 # Optional npm cache directory
 .npm
+
+# Optional eslint cache
+.eslintcache
 
 # Optional REPL history
 .node_repl_history
@@ -43,26 +41,24 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env.test
+.env.production
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
+# Build outputs
+dist
+build
 
-# OS generated files
+# OS metadata
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Uploads
-uploads/
-
-# Temporary files
-tmp/
-temp/
+# IDEs and Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*.iml
